CSS fix wrapping btn

--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -4,8 +4,8 @@
     width: 100%;
     height: 4rem;
     position: fixed;
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
     transition: all 0.8s ease;
     z-index: 100;
 }
@@ -17,6 +17,7 @@
 }
 
 .logo {
+    position: fixed;
     margin: 3%;
     margin-left: 4%;
     height: 11rem;
@@ -34,6 +35,11 @@
 }
 
 .links {
+    position: fixed;
+    right:2%;
+
+    white-space: nowrap;
+
     margin-top: 4rem;
     margin-right: 4rem;
     display: flex;
